Fixed a bug where home page bubbles were showing over the nav bar on smaller screens

--- a/src/Navagation.css
+++ b/src/Navagation.css
@@ -19,6 +19,7 @@
     height: 100vh;
     visibility: hidden;
     transition-duration: 0.5s;
+    z-index: 3;
 }
 
 #nav-bubble:hover #nav-bar {
